Add: sección MCF en index, guía mcf.html y README con referencia a MCF

--- a/ejemplos/landing-paneles-solares.html
+++ b/ejemplos/landing-paneles-solares.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paneles Solares 500W - Landing | Comprar en Amazon</title>
-  <meta name="description" content="Panel solar 500W monocristalino, 22% eficiencia, 25 años de garantía. Landing con botón Comprar en Amazon." />
+  <meta name="description" content="Panel solar 500W monocristalino, 22% eficiencia, 25 aÃ±os de garantÃ­a. Landing con botÃ³n Comprar en Amazon." />
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;background:#f6f7f9;color:#1f2937;line-height:1.6}
@@ -42,34 +42,34 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">Energía Verde • Landing</div>
-      <a href="template-paneles-solares.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
+      <div class="brand">EnergÃ­a Verde â€¢ Landing</div>
+      <a href="template-paneles-solares.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
     </div>
   </header>
 
   <main class="container hero">
     <div class="card p24">
-      <div class="badge">Ahorra hasta 60% en energía</div>
+      <div class="badge">Ahorra hasta 60% en energÃ­a</div>
       <h1 class="title">Panel Solar 500W Monocristalino</h1>
-      <p class="subtitle">Eficiencia del 22%, garantía de 25 años y soporte de instalación profesional. Ideal para hogares que buscan reducir su factura.</p>
+      <p class="subtitle">Eficiencia del 22%, garantÃ­a de 25 aÃ±os y soporte de instalaciÃ³n profesional. Ideal para hogares que buscan reducir su factura.</p>
       <div class="price">
         <span class="new">$399.99</span>
         <span class="old">$549.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=panel+solar+500W" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=panel+solar+500W" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-paneles-solares.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">☀️</div>
+      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">â˜€ï¸</div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
-          <div class="li"><strong>22% eficiencia</strong><span>más energía con menos paneles</span></div>
-          <div class="li"><strong>ROI 5-7 años</strong><span>ahorros sostenidos en tu factura</span></div>
-          <div class="li"><strong>25 años garantía</strong><span>rendimiento respaldado a largo plazo</span></div>
-          <div class="li"><strong>Instalación sencilla</strong><span>compatibilidad con sistemas residenciales</span></div>
+          <div class="li"><strong>22% eficiencia</strong><span>mÃ¡s energÃ­a con menos paneles</span></div>
+          <div class="li"><strong>ROI 5-7 aÃ±os</strong><span>ahorros sostenidos en tu factura</span></div>
+          <div class="li"><strong>25 aÃ±os garantÃ­a</strong><span>rendimiento respaldado a largo plazo</span></div>
+          <div class="li"><strong>InstalaciÃ³n sencilla</strong><span>compatibilidad con sistemas residenciales</span></div>
         </div>
       </div>
     </div>
@@ -78,14 +78,15 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">-60%</div><div>CO₂ estimado</div></div>
+      <div class="kpi"><div class="v">-60%</div><div>COâ‚‚ estimado</div></div>
       <div class="kpi"><div class="v">+115$</div><div>ahorro anual</div></div>
-      <div class="kpi"><div class="v">25 años</div><div>cobertura de garantía</div></div>
+      <div class="kpi"><div class="v">25 aÃ±os</div><div>cobertura de garantÃ­a</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botón “Comprar en Amazon”. No es una oferta real.
+    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
   </footer>
+<p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
 </html>
