--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Product Pages - Portfolio de Ejemplos Profesionales</title>
-    <meta name="description" content="4 ejemplos profesionales de fichas de producto Amazon. Diseño moderno, responsive y optimizado para conversiones.">
+    <meta name="description" content="4 ejemplos profesionales de fichas de producto Amazon. DiseÃ±o moderno, responsive y optimizado para conversiones.">
     <style>
         * {
             margin: 0;
@@ -241,7 +241,7 @@
         }
 
         .product-specs li::before {
-            content: "✓ ";
+            content: "âœ“ ";
             color: #007185;
             font-weight: bold;
             margin-right: 4px;
@@ -439,43 +439,43 @@
             <div class="logo">Amazon<span> Products</span></div>
             <div class="search-box">
                 <input type="text" class="search-input" placeholder="Buscar ejemplos...">
-                <button class="search-btn">🔍</button>
+                <button class="search-btn">ðŸ”</button>
             </div>
             <div class="header-actions">
                 <span class="nav-item">Mi Cuenta</span>
                 <span class="nav-item">Pedidos</span>
-                <span class="nav-item">🛒 Carrito (0)</span>
+                <span class="nav-item">ðŸ›’ Carrito (0)</span>
             </div>
         </div>
     </header>
 
     <!-- HERO BANNER -->
     <section class="hero-banner">
-        <h1>📚 Portfolio de Ejemplos Profesionales</h1>
-        <p>4 fichas de producto con diseño moderno, optimizadas para Amazon y máxima conversión</p>
+        <h1>ðŸ“š Portfolio de Ejemplos Profesionales</h1>
+        <p>4 fichas de producto con diseÃ±o moderno, optimizadas para Amazon y mÃ¡xima conversiÃ³n</p>
     </section>
 
     <!-- MAIN CONTENT -->
     <main class="container">
-        <div class="section-title">✨ Ejemplos Destacados</div>
+        <div class="section-title">âœ¨ Ejemplos Destacados</div>
         <div class="section-subtitle">Haz click en cualquier producto para ver el ejemplo completo</div>
 
         <!-- PRODUCTS GRID -->
         <div class="products-grid">
             <!-- PANELES SOLARES -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-paneles-solares.html'">
-                <div class="product-image">☀️</div>
+                <div class="product-image">â˜€ï¸</div>
                 <div class="product-content">
-                    <div class="product-category">Energía Renovable</div>
+                    <div class="product-category">EnergÃ­a Renovable</div>
                     <div class="product-title">Paneles Solares 500W Monocristalino</div>
                     <div class="product-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-count">(145 reseñas)</span>
+                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
+                        <span class="rating-count">(145 reseÃ±as)</span>
                     </div>
                     <ul class="product-specs">
                         <li>500W alta eficiencia</li>
                         <li>22% rendimiento</li>
-                        <li>25 años garantía</li>
+                        <li>25 aÃ±os garantÃ­a</li>
                     </ul>
                     <div class="product-footer">
                         <div class="product-price">$399.99</div>
@@ -490,17 +490,17 @@
 
             <!-- SMARTWATCH -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-smartwatch.html'">
-                <div class="product-image">⌚</div>
+                <div class="product-image">âŒš</div>
                 <div class="product-content">
                     <div class="product-category">Wearable Tech</div>
                     <div class="product-title">Smartwatch FitPulse Pro Fitness</div>
                     <div class="product-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-count">(892 reseñas)</span>
+                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
+                        <span class="rating-count">(892 reseÃ±as)</span>
                     </div>
                     <ul class="product-specs">
-                        <li>Monitor cardíaco FDA</li>
-                        <li>14 días batería</li>
+                        <li>Monitor cardÃ­aco FDA</li>
+                        <li>14 dÃ­as baterÃ­a</li>
                         <li>GPS + GLONASS</li>
                     </ul>
                     <div class="product-footer">
@@ -516,13 +516,13 @@
 
             <!-- ZAPATILLAS -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-zapatillas.html'">
-                <div class="product-image">👟</div>
+                <div class="product-image">ðŸ‘Ÿ</div>
                 <div class="product-content">
                     <div class="product-category">Deportes & Fitness</div>
                     <div class="product-title">Zapatillas SprintMax Ultra Performance</div>
                     <div class="product-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-count">(1,247 reseñas)</span>
+                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
+                        <span class="rating-count">(1,247 reseÃ±as)</span>
                     </div>
                     <ul class="product-specs">
                         <li>185g ultraligera</li>
@@ -542,13 +542,13 @@
 
             <!-- MONITOR 4K -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-monitor-4k.html'">
-                <div class="product-image">🖥️</div>
+                <div class="product-image">ðŸ–¥ï¸</div>
                 <div class="product-content">
-                    <div class="product-category">Electrónica Profesional</div>
+                    <div class="product-category">ElectrÃ³nica Profesional</div>
                     <div class="product-title">Monitor 4K ProDisplay Elite USB-C</div>
                     <div class="product-rating">
-                        <span class="stars">★★★★★</span>
-                        <span class="rating-count">(543 reseñas)</span>
+                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
+                        <span class="rating-count">(543 reseÃ±as)</span>
                     </div>
                     <ul class="product-specs">
                         <li>4K nativo 3840x2160</li>
@@ -570,33 +570,33 @@
         <!-- ABOUT SECTION -->
         <section class="about-section">
             <h2>Acerca de Este Portfolio</h2>
-            <p>Este es un showcase profesional de 4 fichas de producto completamente funcionales, diseñadas con estética Amazon y optimizadas para máxima conversión.</p>
-            <p>Cada ejemplo incluye: HTML responsive, CSS moderno, datos estructurados JSON, y mejores prácticas de UX/UI para e-commerce.</p>
+            <p>Este es un showcase profesional de 4 fichas de producto completamente funcionales, diseÃ±adas con estÃ©tica Amazon y optimizadas para mÃ¡xima conversiÃ³n.</p>
+            <p>Cada ejemplo incluye: HTML responsive, CSS moderno, datos estructurados JSON, y mejores prÃ¡cticas de UX/UI para e-commerce.</p>
 
             <div class="features-list">
                 <div class="feature">
-                    <h3>🎨 Diseño Profesional</h3>
-                    <p>Templates HTML/CSS responsive con estética moderna y optimizados para conversión</p>
+                    <h3>ðŸŽ¨ DiseÃ±o Profesional</h3>
+                    <p>Templates HTML/CSS responsive con estÃ©tica moderna y optimizados para conversiÃ³n</p>
                 </div>
                 <div class="feature">
-                    <h3>📱 Mobile First</h3>
-                    <p>100% funcional en dispositivos móviles, tablets y desktop con diseño adaptable</p>
+                    <h3>ðŸ“± Mobile First</h3>
+                    <p>100% funcional en dispositivos mÃ³viles, tablets y desktop con diseÃ±o adaptable</p>
                 </div>
                 <div class="feature">
-                    <h3>🔍 SEO Optimizado</h3>
-                    <p>Estructura semántica, keywords estratégicos y meta tags para búsqueda en Amazon</p>
+                    <h3>ðŸ” SEO Optimizado</h3>
+                    <p>Estructura semÃ¡ntica, keywords estratÃ©gicos y meta tags para bÃºsqueda en Amazon</p>
                 </div>
                 <div class="feature">
-                    <h3>📊 Datos Estructurados</h3>
+                    <h3>ðŸ“Š Datos Estructurados</h3>
                     <p>Archivos JSON con especificaciones, precios, reviews y datos completos de cada producto</p>
                 </div>
                 <div class="feature">
-                    <h3>✨ Animaciones Suaves</h3>
+                    <h3>âœ¨ Animaciones Suaves</h3>
                     <p>Transiciones elegantes, hover effects y interactividad profesional</p>
                 </div>
                 <div class="feature">
-                    <h3>🎯 Conversión Enfocada</h3>
-                    <p>CTAs claros, trust signals, testimonios y psicología de compra aplicada</p>
+                    <h3>ðŸŽ¯ ConversiÃ³n Enfocada</h3>
+                    <p>CTAs claros, trust signals, testimonios y psicologÃ­a de compra aplicada</p>
                 </div>
             </div>
         </section>
@@ -607,27 +607,27 @@
         <div class="footer-content">
             <div class="footer-column">
                 <h4>Ejemplos</h4>
-                <a href="ejemplos/template-paneles-solares.html">☀️ Paneles Solares</a>
-                <a href="ejemplos/template-smartwatch.html">⌚ Smartwatch</a>
-                <a href="ejemplos/template-zapatillas.html">👟 Zapatillas</a>
-                <a href="ejemplos/template-monitor-4k.html">🖥️ Monitor 4K</a>
+                <a href="ejemplos/template-paneles-solares.html">â˜€ï¸ Paneles Solares</a>
+                <a href="ejemplos/template-smartwatch.html">âŒš Smartwatch</a>
+                <a href="ejemplos/template-zapatillas.html">ðŸ‘Ÿ Zapatillas</a>
+                <a href="ejemplos/template-monitor-4k.html">ðŸ–¥ï¸ Monitor 4K</a>
             </div>
             <div class="footer-column">
                 <h4>Recursos</h4>
-                <a href="README.md">Documentación</a>
+                <a href="README.md">DocumentaciÃ³n</a>
                 <a href="Checklist_Producto_Amazon.md">Checklist 9 Fases</a>
-                <a href="guia-contenidos-amazon.md">Guía de Contenidos</a>
+                <a href="guia-contenidos-amazon.md">GuÃ­a de Contenidos</a>
                 <a href="GITHUB_PAGES_SETUP.md">Setup GitHub Pages</a>
             </div>
             <div class="footer-column">
-                <h4>Tecnología</h4>
+                <h4>TecnologÃ­a</h4>
                 <a href="https://github.com/dsd228/amazon-product-page">GitHub Repository</a>
                 <a href="https://github.com/dsd228">Perfil GitHub</a>
                 <a href="https://dsd228.github.io">Portfolio Personal</a>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 Amazon Product Pages | Diseño profesional para e-commerce | MIT License</p>
+            <p>&copy; 2026 Amazon Product Pages | DiseÃ±o profesional para e-commerce | MIT License</p>
         </div>
     </footer>
 
@@ -658,5 +658,22 @@
             });
         });
     </script>
+<section class="mcf-section" style="max-width:1100px;margin:40px auto;padding:24px;border:1px solid #e5e7eb;border-radius:12px;background:#fff">
+  <h2 style="margin:0 0 12px 0;font-size:22px">Logística Multicanal (MCF) de Amazon</h2>
+  <p style="margin:0 0 12px 0;color:#374151">
+    Usa tu inventario de Logística de Amazon para cumplir pedidos de tu propio sitio y otros canales,
+    con entregas tan rápidas como en 2 días y seguimiento en tiempo real.
+  </p>
+  <ul style="margin:0 0 16px 18px;color:#374151">
+    <li>Integraciones listas: Shopify, WooCommerce y más de 100 opciones.</li>
+    <li>Inventario unificado y precios predecibles (recepción, embalaje y envío).</li>
+    <li>Distintivos de velocidad para mostrar ETA y aumentar conversión.</li>
+  </ul>
+  <div style="display:flex;gap:12px;flex-wrap:wrap">
+    <a href="mcf.html" style="background:#111827;color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none">Guía: MCF en tu sitio</a>
+    <a href="https://sell.amazon.com/fulfillment-by-amazon/fba-multi-channel" target="_blank" rel="noopener" style="background:#f3f4f6;color:#111827;padding:10px 14px;border-radius:8px;text-decoration:none;border:1px solid #e5e7eb">Más info oficial</a>
+  </div>
+</section>
 </body>
 </html>
+
