--- a/ejemplos/landing-monitor-4k.html
+++ b/ejemplos/landing-monitor-4k.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Monitor 4K ProDisplay Elite - Landing | Comprar en Amazon</title>
-  <meta name="description" content="Monitor 32'' 4K, DCI-P3 98%, USB-C Thunderbolt 3. Landing con botón Comprar en Amazon." />
+  <meta name="description" content="Monitor 32'' 4K, DCI-P3 98%, USB-C Thunderbolt 3. Landing con botÃ³n Comprar en Amazon." />
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;background:#f6f7f9;color:#0f172a;line-height:1.6}
@@ -42,34 +42,34 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">ProDisplay • Landing</div>
-      <a href="template-monitor-4k.html" style="color:#e5e7eb;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
+      <div class="brand">ProDisplay â€¢ Landing</div>
+      <a href="template-monitor-4k.html" style="color:#e5e7eb;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
     </div>
   </header>
 
   <main class="container hero">
     <div class="card p24">
-      <div class="badge">Factory-Calibrated • DCI-P3 98%</div>
+      <div class="badge">Factory-Calibrated â€¢ DCI-P3 98%</div>
       <h1 class="title">Monitor 4K ProDisplay Elite 32"</h1>
-      <p class="subtitle">Precisión de color profesional, USB-C Thunderbolt 3 y 1.07B colores. Ideal para diseño, foto y edición.</p>
+      <p class="subtitle">PrecisiÃ³n de color profesional, USB-C Thunderbolt 3 y 1.07B colores. Ideal para diseÃ±o, foto y ediciÃ³n.</p>
       <div class="price">
         <span class="new">$449.99</span>
         <span class="old">$649.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=monitor+4k+usb-c+dci-p3" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=monitor+4k+usb-c+dci-p3" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-monitor-4k.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">🖥️</div>
+      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">ðŸ–¥ï¸</div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
           <div class="li"><strong>DCI-P3 98%</strong><span>cobertura de color profesional</span></div>
           <div class="li"><strong>USB-C TB3</strong><span>un cable para todo (100W)</span></div>
           <div class="li"><strong>10-bit</strong><span>1.07 billones de colores</span></div>
-          <div class="li"><strong>Delta E < 2</strong><span>calibración de fábrica</span></div>
+          <div class="li"><strong>Delta E < 2</strong><span>calibraciÃ³n de fÃ¡brica</span></div>
         </div>
       </div>
     </div>
@@ -78,14 +78,15 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">4.9★</div><div>calificación media</div></div>
-      <div class="kpi"><div class="v">543</div><div>reseñas totales</div></div>
+      <div class="kpi"><div class="v">4.9â˜…</div><div>calificaciÃ³n media</div></div>
+      <div class="kpi"><div class="v">543</div><div>reseÃ±as totales</div></div>
       <div class="kpi"><div class="v">31%</div><div>ahorro actual</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botón “Comprar en Amazon”. No es una oferta real.
+    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
   </footer>
+<p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
 </html>
