--- a/ejemplos/landing-smartwatch.html
+++ b/ejemplos/landing-smartwatch.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smartwatch FitPulse Pro - Landing | Comprar en Amazon</title>
-  <meta name="description" content="Smartwatch con monitor cardíaco certificado, 14 días batería. Landing con botón Comprar en Amazon." />
+  <meta name="description" content="Smartwatch con monitor cardÃ­aco certificado, 14 dÃ­as baterÃ­a. Landing con botÃ³n Comprar en Amazon." />
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;background:#f6f7f9;color:#0f172a;line-height:1.6}
@@ -42,32 +42,32 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">FitPulse • Landing</div>
-      <a href="template-smartwatch.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
+      <div class="brand">FitPulse â€¢ Landing</div>
+      <a href="template-smartwatch.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
     </div>
   </header>
 
   <main class="container hero">
     <div class="card p24">
-      <div class="badge">Monitor cardíaco con certificación</div>
+      <div class="badge">Monitor cardÃ­aco con certificaciÃ³n</div>
       <h1 class="title">Smartwatch FitPulse Pro</h1>
-      <p class="subtitle">Monitoreo de salud avanzado, 14 días de batería, 100+ modos deportivos. Ideal para entrenar y vivir mejor.</p>
+      <p class="subtitle">Monitoreo de salud avanzado, 14 dÃ­as de baterÃ­a, 100+ modos deportivos. Ideal para entrenar y vivir mejor.</p>
       <div class="price">
         <span class="new">$179.99</span>
         <span class="old">$249.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=fitpulse+smartwatch" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=fitpulse+smartwatch" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-smartwatch.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">⌚</div>
+      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">âŒš</div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
-          <div class="li"><strong>±2 bpm</strong><span>precisión de ritmo cardíaco</span></div>
-          <div class="li"><strong>14 días</strong><span>batería de larga duración</span></div>
+          <div class="li"><strong>Â±2 bpm</strong><span>precisiÃ³n de ritmo cardÃ­aco</span></div>
+          <div class="li"><strong>14 dÃ­as</strong><span>baterÃ­a de larga duraciÃ³n</span></div>
           <div class="li"><strong>100+ modos</strong><span>deporte y salud integrales</span></div>
           <div class="li"><strong>IP68</strong><span>resistencia al agua</span></div>
         </div>
@@ -78,14 +78,15 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">4.7★</div><div>calificación media</div></div>
-      <div class="kpi"><div class="v">892</div><div>reseñas totales</div></div>
-      <div class="kpi"><div class="v">20%</div><div>descuento con cupón</div></div>
+      <div class="kpi"><div class="v">4.7â˜…</div><div>calificaciÃ³n media</div></div>
+      <div class="kpi"><div class="v">892</div><div>reseÃ±as totales</div></div>
+      <div class="kpi"><div class="v">20%</div><div>descuento con cupÃ³n</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botón “Comprar en Amazon”. No es una oferta real.
+    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
   </footer>
+<p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
 </html>
