--- a/ejemplos/landing-zapatillas.html
+++ b/ejemplos/landing-zapatillas.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zapatillas SprintMax Ultra - Landing | Comprar en Amazon</title>
-  <meta name="description" content="Zapatilla de alto rendimiento 185g, placa carbono. Landing con botón Comprar en Amazon." />
+  <meta name="description" content="Zapatilla de alto rendimiento 185g, placa carbono. Landing con botÃ³n Comprar en Amazon." />
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;background:#f6f7f9;color:#0f172a;line-height:1.6}
@@ -42,8 +42,8 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">SprintMax • Landing</div>
-      <a href="template-zapatillas.html" style="color:#fff7ed;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
+      <div class="brand">SprintMax â€¢ Landing</div>
+      <a href="template-zapatillas.html" style="color:#fff7ed;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
     </div>
   </header>
 
@@ -57,19 +57,19 @@
         <span class="old">$179.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=running+carbon+shoes" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=running+carbon+shoes" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-zapatillas.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">👟</div>
+      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">ðŸ‘Ÿ</div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
           <div class="li"><strong>185g</strong><span>peso ultraligero</span></div>
-          <div class="li"><strong>Placa carbono</strong><span>retorno de energía</span></div>
+          <div class="li"><strong>Placa carbono</strong><span>retorno de energÃ­a</span></div>
           <div class="li"><strong>800+ km</strong><span>durabilidad garantizada</span></div>
-          <div class="li"><strong>IAAF</strong><span>aprobación competitiva</span></div>
+          <div class="li"><strong>IAAF</strong><span>aprobaciÃ³n competitiva</span></div>
         </div>
       </div>
     </div>
@@ -78,14 +78,15 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">4.8★</div><div>calificación media</div></div>
-      <div class="kpi"><div class="v">1,247</div><div>reseñas totales</div></div>
-      <div class="kpi"><div class="v">15%</div><div>cupón RUNFAST15</div></div>
+      <div class="kpi"><div class="v">4.8â˜…</div><div>calificaciÃ³n media</div></div>
+      <div class="kpi"><div class="v">1,247</div><div>reseÃ±as totales</div></div>
+      <div class="kpi"><div class="v">15%</div><div>cupÃ³n RUNFAST15</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botón “Comprar en Amazon”. No es una oferta real.
+    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
   </footer>
+<p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
 </html>
