Transform: index como catálogo de templates (4 estilos + opción personalizada)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Product Pages - Portfolio de Ejemplos Profesionales</title>
-    <meta name="description" content="4 ejemplos profesionales de fichas de producto Amazon. DiseÃ±o moderno, responsive y optimizado para conversiones.">
+    <title>Amazon Product Pages - Catálogo de Diseños y Templates</title>
+    <meta name="description" content="Catálogo de templates profesionales para fichas Amazon. Elige el estilo que mejor se adapta a tu producto o solicita un diseño personalizado.">
     <style>
         * {
             margin: 0;
@@ -451,127 +451,153 @@
 
     <!-- HERO BANNER -->
     <section class="hero-banner">
-        <h1>ðŸ“š Portfolio de Ejemplos Profesionales</h1>
-        <p>4 fichas de producto con diseÃ±o moderno, optimizadas para Amazon y mÃ¡xima conversiÃ³n</p>
+        <h1>🎨 Catálogo de Diseños para Amazon</h1>
+        <p>Elige el template perfecto para tu producto o solicita un diseño 100% personalizado</p>
     </section>
 
     <!-- MAIN CONTENT -->
     <main class="container">
-        <div class="section-title">âœ¨ Ejemplos Destacados</div>
-        <div class="section-subtitle">Haz click en cualquier producto para ver el ejemplo completo</div>
+        <div class="section-title">🎯 Templates Disponibles</div>
+        <div class="section-subtitle">Explora nuestros estilos profesionales y selecciona el que mejor represente tu marca</div>
 
-        <!-- PRODUCTS GRID -->
+                <!-- PRODUCTS GRID -->
         <div class="products-grid">
-            <!-- PANELES SOLARES -->
+            <!-- TEMPLATE: GREEN/ECO -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-paneles-solares.html'">
-                <div class="product-image">â˜€ï¸</div>
+                <div class="product-image">☀️</div>
                 <div class="product-content">
-                    <div class="product-category">EnergÃ­a Renovable</div>
-                    <div class="product-title">Paneles Solares 500W Monocristalino</div>
+                    <div class="product-category">🌿 ESTILO: GREEN/ECO</div>
+                    <div class="product-title">Template para Productos Ecológicos y Sustentables</div>
                     <div class="product-rating">
-                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
-                        <span class="rating-count">(145 reseÃ±as)</span>
+                        <span class="stars">★★★★★</span>
+                        <span class="rating-count">Ver demo →</span>
                     </div>
                     <ul class="product-specs">
-                        <li>500W alta eficiencia</li>
-                        <li>22% rendimiento</li>
-                        <li>25 aÃ±os garantÃ­a</li>
+                        <li>Paleta verde natural</li>
+                        <li>Énfasis en sustentabilidad</li>
+                        <li>Ideal: energía, orgánico</li>
                     </ul>
                     <div class="product-footer">
-                        <div class="product-price">$399.99</div>
+                        <div class="product-price" style="font-size:14px;color:#007185">Ejemplo: Paneles Solares</div>
                         <span class="prime-badge">ECO</span>
                     </div>
                 </div>
-                                <div class="btn-row">
-                                    <a class="view-btn" href="ejemplos/template-paneles-solares.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
-                                    <a class="buy-btn" href="ejemplos/landing-paneles-solares.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
-                                </div>
+                <div class="btn-row">
+                    <a class="view-btn" href="ejemplos/template-paneles-solares.html" onclick="event.stopPropagation()">Ver Template</a>
+                    <a class="buy-btn" href="ejemplos/landing-paneles-solares.html" onclick="event.stopPropagation()">Ver Landing</a>
+                </div>
             </div>
 
-            <!-- SMARTWATCH -->
+            <!-- TEMPLATE: TECH/MODERN -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-smartwatch.html'">
-                <div class="product-image">âŒš</div>
+                <div class="product-image">⌚</div>
                 <div class="product-content">
-                    <div class="product-category">Wearable Tech</div>
-                    <div class="product-title">Smartwatch FitPulse Pro Fitness</div>
+                    <div class="product-category">💙 ESTILO: TECH/MODERN</div>
+                    <div class="product-title">Template para Gadgets y Tecnología Avanzada</div>
                     <div class="product-rating">
-                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
-                        <span class="rating-count">(892 reseÃ±as)</span>
+                        <span class="stars">★★★★★</span>
+                        <span class="rating-count">Ver demo →</span>
                     </div>
                     <ul class="product-specs">
-                        <li>Monitor cardÃ­aco FDA</li>
-                        <li>14 dÃ­as baterÃ­a</li>
-                        <li>GPS + GLONASS</li>
+                        <li>Paleta azul tecnológica</li>
+                        <li>Énfasis en innovación</li>
+                        <li>Ideal: wearables, IoT</li>
                     </ul>
                     <div class="product-footer">
-                        <div class="product-price">$179.99</div>
-                        <span class="prime-badge">PRIME</span>
+                        <div class="product-price" style="font-size:14px;color:#007185">Ejemplo: Smartwatch</div>
+                        <span class="prime-badge">TECH</span>
                     </div>
                 </div>
-                                <div class="btn-row">
-                                    <a class="view-btn" href="ejemplos/template-smartwatch.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
-                                    <a class="buy-btn" href="ejemplos/landing-smartwatch.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
-                                </div>
+                <div class="btn-row">
+                    <a class="view-btn" href="ejemplos/template-smartwatch.html" onclick="event.stopPropagation()">Ver Template</a>
+                    <a class="buy-btn" href="ejemplos/landing-smartwatch.html" onclick="event.stopPropagation()">Ver Landing</a>
+                </div>
             </div>
 
-            <!-- ZAPATILLAS -->
+            <!-- TEMPLATE: SPORTS/DYNAMIC -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-zapatillas.html'">
-                <div class="product-image">ðŸ‘Ÿ</div>
+                <div class="product-image">👟</div>
                 <div class="product-content">
-                    <div class="product-category">Deportes & Fitness</div>
-                    <div class="product-title">Zapatillas SprintMax Ultra Performance</div>
+                    <div class="product-category">🔥 ESTILO: SPORTS/DYNAMIC</div>
+                    <div class="product-title">Template para Deportes y Fitness de Alto Rendimiento</div>
                     <div class="product-rating">
-                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
-                        <span class="rating-count">(1,247 reseÃ±as)</span>
+                        <span class="stars">★★★★★</span>
+                        <span class="rating-count">Ver demo →</span>
                     </div>
                     <ul class="product-specs">
-                        <li>185g ultraligera</li>
-                        <li>Placa carbono IAAF</li>
-                        <li>800+ km durabilidad</li>
+                        <li>Paleta naranja energía</li>
+                        <li>Énfasis en rendimiento</li>
+                        <li>Ideal: deportes, fitness</li>
                     </ul>
                     <div class="product-footer">
-                        <div class="product-price">$129.99</div>
-                        <span class="prime-badge">PRIME</span>
+                        <div class="product-price" style="font-size:14px;color:#007185">Ejemplo: Zapatillas</div>
+                        <span class="prime-badge">SPORT</span>
                     </div>
                 </div>
-                                <div class="btn-row">
-                                    <a class="view-btn" href="ejemplos/template-zapatillas.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
-                                    <a class="buy-btn" href="ejemplos/landing-zapatillas.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
-                                </div>
+                <div class="btn-row">
+                    <a class="view-btn" href="ejemplos/template-zapatillas.html" onclick="event.stopPropagation()">Ver Template</a>
+                    <a class="buy-btn" href="ejemplos/landing-zapatillas.html" onclick="event.stopPropagation()">Ver Landing</a>
+                </div>
             </div>
 
-            <!-- MONITOR 4K -->
+            <!-- TEMPLATE: PRO/MINIMAL -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-monitor-4k.html'">
-                <div class="product-image">ðŸ–¥ï¸</div>
+                <div class="product-image">🖥️</div>
                 <div class="product-content">
-                    <div class="product-category">ElectrÃ³nica Profesional</div>
-                    <div class="product-title">Monitor 4K ProDisplay Elite USB-C</div>
+                    <div class="product-category">⚫ ESTILO: PRO/MINIMAL</div>
+                    <div class="product-title">Template para Electrónica y Productos Premium</div>
                     <div class="product-rating">
-                        <span class="stars">â˜…â˜…â˜…â˜…â˜…</span>
-                        <span class="rating-count">(543 reseÃ±as)</span>
+                        <span class="stars">★★★★★</span>
+                        <span class="rating-count">Ver demo →</span>
                     </div>
                     <ul class="product-specs">
-                        <li>4K nativo 3840x2160</li>
-                        <li>DCI-P3 98% color</li>
-                        <li>Thunderbolt 3</li>
+                        <li>Paleta negra minimalista</li>
+                        <li>Énfasis en precisión</li>
+                        <li>Ideal: electrónica, pro</li>
                     </ul>
                     <div class="product-footer">
-                        <div class="product-price">$449.99</div>
+                        <div class="product-price" style="font-size:14px;color:#007185">Ejemplo: Monitor 4K</div>
                         <span class="prime-badge">PRO</span>
                     </div>
                 </div>
-                                <div class="btn-row">
-                                    <a class="view-btn" href="ejemplos/template-monitor-4k.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
-                                    <a class="buy-btn" href="ejemplos/landing-monitor-4k.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
-                                </div>
+                <div class="btn-row">
+                    <a class="view-btn" href="ejemplos/template-monitor-4k.html" onclick="event.stopPropagation()">Ver Template</a>
+                    <a class="buy-btn" href="ejemplos/landing-monitor-4k.html" onclick="event.stopPropagation()">Ver Landing</a>
+                </div>
+            </div>
+
+            <!-- DISEÑO PERSONALIZADO -->
+            <div class="product-card" style="border:2px dashed #FF9900;background:linear-gradient(135deg,#fff9f0 0%,#ffffff 100%)">
+                <div class="product-image" style="background:linear-gradient(135deg,#FF9900 0%,#F57C00 100%);color:white">✨</div>
+                <div class="product-content">
+                    <div class="product-category" style="color:#FF9900">💎 DISEÑO PERSONALIZADO</div>
+                    <div class="product-title">Crea un Template 100% Adaptado a Tu Marca</div>
+                    <div class="product-rating">
+                        <span class="stars" style="color:#FF9900">★★★★★</span>
+                        <span class="rating-count" style="color:#FF9900">Consulta →</span>
+                    </div>
+                    <ul class="product-specs">
+                        <li>Paleta de tu marca</li>
+                        <li>Diseño único y exclusivo</li>
+                        <li>Optimizado para tu nicho</li>
+                    </ul>
+                    <div class="product-footer">
+                        <div class="product-price" style="font-size:14px;color:#FF9900;font-weight:bold">Cotización personalizada</div>
+                        <span class="prime-badge" style="background:#FF9900">CUSTOM</span>
+                    </div>
+                </div>
+                <div class="btn-row">
+                    <a class="view-btn" style="background:#FF9900;color:white;border-color:#FF9900" href="mailto:contacto@ejemplo.com?subject=Solicitud de Diseño Personalizado">Solicitar Cotización</a>
+                    <a class="buy-btn" style="background:#fff;color:#FF9900;border:2px solid #FF9900" href="https://github.com/dsd228/amazon-product-page/issues/new">Abrir Consulta</a>
+                </div>
             </div>
         </div>
 
         <!-- ABOUT SECTION -->
         <section class="about-section">
-            <h2>Acerca de Este Portfolio</h2>
-            <p>Este es un showcase profesional de 4 fichas de producto completamente funcionales, diseÃ±adas con estÃ©tica Amazon y optimizadas para mÃ¡xima conversiÃ³n.</p>
-            <p>Cada ejemplo incluye: HTML responsive, CSS moderno, datos estructurados JSON, y mejores prÃ¡cticas de UX/UI para e-commerce.</p>
+            <h2>¿Cómo Funciona?</h2>
+            <p>Explora nuestro catálogo de templates profesionales, cada uno optimizado para un tipo de producto y diseñado con las mejores prácticas de Amazon.</p>
+            <p>Elige el estilo que mejor se adapte a tu marca o solicita un diseño 100% personalizado para máxima diferenciación.</p>
 
             <div class="features-list">
                 <div class="feature">
@@ -710,5 +736,6 @@
 </section>
 </body>
 </html>
+
 
 
