Add: imágenes profesionales de Unsplash en cards de templates

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="products-grid">
             <!-- TEMPLATE: GREEN/ECO -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-paneles-solares.html'">
-                <div class="product-image">☀️</div>
+                <div class="product-image" style="background-image:url('https://images.unsplash.com/photo-1509391366360-2e959784a276?w=800&h=600&fit=crop&q=80');background-size:cover;background-position:center"></div>
                 <div class="product-content">
                     <div class="product-category">🌿 ESTILO: GREEN/ECO</div>
                     <div class="product-title">Template para Productos Ecológicos y Sustentables</div>
@@ -490,7 +490,7 @@
 
             <!-- TEMPLATE: TECH/MODERN -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-smartwatch.html'">
-                <div class="product-image">⌚</div>
+                <div class="product-image" style="background-image:url('https://images.unsplash.com/photo-1579586337278-3befd40fd17a?w=800&h=600&fit=crop&q=80');background-size:cover;background-position:center"></div>
                 <div class="product-content">
                     <div class="product-category">💙 ESTILO: TECH/MODERN</div>
                     <div class="product-title">Template para Gadgets y Tecnología Avanzada</div>
@@ -516,7 +516,7 @@
 
             <!-- TEMPLATE: SPORTS/DYNAMIC -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-zapatillas.html'">
-                <div class="product-image">👟</div>
+                <div class="product-image" style="background-image:url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=800&h=600&fit=crop&q=80');background-size:cover;background-position:center"></div>
                 <div class="product-content">
                     <div class="product-category">🔥 ESTILO: SPORTS/DYNAMIC</div>
                     <div class="product-title">Template para Deportes y Fitness de Alto Rendimiento</div>
@@ -542,7 +542,7 @@
 
             <!-- TEMPLATE: PRO/MINIMAL -->
             <div class="product-card" onclick="window.location.href='ejemplos/template-monitor-4k.html'">
-                <div class="product-image">🖥️</div>
+                <div class="product-image" style="background-image:url('https://images.unsplash.com/photo-1527443224154-c4a3942d3acf?w=800&h=600&fit=crop&q=80');background-size:cover;background-position:center"></div>
                 <div class="product-content">
                     <div class="product-category">⚫ ESTILO: PRO/MINIMAL</div>
                     <div class="product-title">Template para Electrónica y Productos Premium</div>
@@ -568,7 +568,9 @@
 
             <!-- DISEÑO PERSONALIZADO -->
             <div class="product-card" style="border:2px dashed #FF9900;background:linear-gradient(135deg,#fff9f0 0%,#ffffff 100%)">
-                <div class="product-image" style="background:linear-gradient(135deg,#FF9900 0%,#F57C00 100%);color:white">✨</div>
+                <div class="product-image" style="background-image:url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=600&fit=crop&q=80');background-size:cover;background-position:center;position:relative">
+                    <div style="position:absolute;inset:0;background:linear-gradient(135deg,rgba(255,153,0,0.85) 0%,rgba(245,124,0,0.85) 100%);display:flex;align-items:center;justify-content:center;color:white;font-size:60px">✨</div>
+                </div>
                 <div class="product-content">
                     <div class="product-category" style="color:#FF9900">💎 DISEÑO PERSONALIZADO</div>
                     <div class="product-title">Crea un Template 100% Adaptado a Tu Marca</div>
