Fix: caracteres UTF-8 en sección de características

--- a/index.html
+++ b/index.html
@@ -603,28 +603,28 @@
 
             <div class="features-list">
                 <div class="feature">
-                    <h3>ðŸŽ¨ DiseÃ±o Profesional</h3>
-                    <p>Templates HTML/CSS responsive con estÃ©tica moderna y optimizados para conversiÃ³n</p>
+                    <h3>🎨 Diseño Profesional</h3>
+                    <p>Templates HTML/CSS responsive con estética moderna y optimizados para conversión</p>
                 </div>
                 <div class="feature">
-                    <h3>ðŸ“± Mobile First</h3>
-                    <p>100% funcional en dispositivos mÃ³viles, tablets y desktop con diseÃ±o adaptable</p>
+                    <h3>📱 Mobile First</h3>
+                    <p>100% funcional en dispositivos móviles, tablets y desktop con diseño adaptable</p>
                 </div>
                 <div class="feature">
-                    <h3>ðŸ” SEO Optimizado</h3>
-                    <p>Estructura semÃ¡ntica, keywords estratÃ©gicos y meta tags para bÃºsqueda en Amazon</p>
+                    <h3>🔍 SEO Optimizado</h3>
+                    <p>Estructura semántica, keywords estratégicos y meta tags para búsqueda en Amazon</p>
                 </div>
                 <div class="feature">
-                    <h3>ðŸ“Š Datos Estructurados</h3>
+                    <h3>📊 Datos Estructurados</h3>
                     <p>Archivos JSON con especificaciones, precios, reviews y datos completos de cada producto</p>
                 </div>
                 <div class="feature">
-                    <h3>âœ¨ Animaciones Suaves</h3>
+                    <h3>✨ Animaciones Suaves</h3>
                     <p>Transiciones elegantes, hover effects y interactividad profesional</p>
                 </div>
                 <div class="feature">
-                    <h3>ðŸŽ¯ ConversiÃ³n Enfocada</h3>
-                    <p>CTAs claros, trust signals, testimonios y psicologÃ­a de compra aplicada</p>
+                    <h3>🎯 Conversión Enfocada</h3>
+                    <p>CTAs claros, trust signals, testimonios y psicología de compra aplicada</p>
                 </div>
             </div>
         </section>
