Add: imagenes Unsplash en landing pages

--- a/ejemplos/landing-paneles-solares.html
+++ b/ejemplos/landing-paneles-solares.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">â˜€ï¸</div>
+      <div style="height:260px;background:url('https://images.unsplash.com/photo-1509391366360-2e959784a276?w=600&h=260&fit=crop&q=80') center/cover;border-radius:8px"></div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
