--- a/ejemplos/landing-smartwatch.html
+++ b/ejemplos/landing-smartwatch.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">âŒš</div>
+      <div style="height:260px;background:url('https://images.unsplash.com/photo-1579586337278-3befd40fd17a?w=600&h=260&fit=crop&q=80') center/cover;border-radius:8px"></div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
